--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@supabase/supabase-js": "^2.50.2",
     "axios": "^1.6.2",
     "buffer": "^6.0.3",
+    "howler": "^2.2.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/howler": "^2.2.12",
     "@types/node": "^24.0.7",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
