Add PPA locking system with SOL rewards
- Add LockingModal component for PPA token locking (7-30 days)
- Add UnlockModal component for requesting token unlocks
- Implement real PPA token transfers to platform wallet
- Add lifetime SOL earnings tracking in rewards tab
- Add countdown timer showing lock expiration status
- Add unlock request system with database integration
- Update rewards tab with 4-column stats and lock status
- Add Supabase migrations for ppa_locks and ppa_unlock_requests tables
- Integrate real PPA price fetching from Birdeye API
- Add immediate SOL reward crediting system
- Update UI text to explain lock-and-earn functionality
- Install @solana/spl-token for token transfers

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@jup-ag/api": "^6.0.27",
     "@netlify/functions": "^4.1.8",
+    "@solana/spl-token": "^0.4.13",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
